2011-09-15  Andreas Kupries  <andreask@activestate.com>

	* generic/bitmap.c: Exported the bitmap extraction and
	* generic/bitmap.h: result functions, for general use
	* generic/topology.c: everywhere bitmaps are handled.
	* doc/instance.inc: Starting with node/cpu set 'convert'.
	* doc/tcl-hwloc.man: Extended documentation.

	* tests/topology_convert.test: Extended and more robust (Working
	  on a synthetic configuration, not whatever the testing machine
	  has). Missing: NUMA test cases.

	* tests/create.test: Fixed left behind temp directory.

	* doc/oid.inc: New file, syntax of object identifiers.
	* doc/tcl-hwloc.man: Added section about object identifiers.

	* generic/topology.c: Fixed wrong args typo.
	* doc/instance.inc: Continued extending documentation and
	* tests/create.test: testsuite coverage of topology instance
	* tests/topology.test: methods. Reworked the testsuite a bit to
	  use XML files of saved real topologies instead of embedding
	  them. See below.
	* tests/pu4.xml: New files, saved topologies.
	* tests/topology1.xml: 

	* tests/bitmap.test: Updated test 3.0.13 to handle platform
	  differences (word size).

	* tests/convert.test: Renamed/deleted. Added a 'topology_'
	* tests/cpu_node_set.test: prefix to clarify what section
	* tests/cpubind.test: of the API they belong to.
	* tests/membind.test:

	* tests/topology_convert.test: Renamed/Added. See above.
	* tests/topology_cpu_node_set.test:
	* tests/topology_cpubind.test:
	* tests/topology_membind.test:

2011-09-14  Andreas Kupries  <andreask@activestate.com>

	* doc/instance.inc: Extended documentation and testsuite, covering
	* tests/topology.test: instance methods 'type' and 'width'.

	* tests/topology.test: Started conversion to proper testsuite, and
	  expansion to all instance methods.

	* generic/bitmap.c: Fixed warning about possible uninitialized variable.
	* generic/hwloc.c: Added check to -set_synthetic processing to avoid